User's API endpoint
Some wiring code to get some dummy data to work
